--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,14 @@
     <servlet-name>CreateEPR</servlet-name>
     <servlet-class>sep.servlets.CreateEPR</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>WorkItemListEPR</servlet-name>
+    <servlet-class>sep.servlets.WorkItemListEPR</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GetEPR</servlet-name>
+    <servlet-class>sep.servlets.GetEPR</servlet-class>
+  </servlet>
   
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
@@ -64,6 +72,14 @@
     <servlet-name>CreateEPR</servlet-name>
     <url-pattern>/CreateEPR</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>WorkItemListEPR</servlet-name>
+    <url-pattern>/WorkItemListEPR</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GetEPR</servlet-name>
+    <url-pattern>/GetEPR</url-pattern>
+  </servlet-mapping>
   
   
   <filter>
@@ -101,6 +117,10 @@
   <filter>
     <filter-name>AuthServSubteam</filter-name>
     <filter-class>sep.filters.AuthServSubteam</filter-class>
+  </filter>
+  <filter>
+    <filter-name>AuthWorkItemListEPR</filter-name>
+    <filter-class>sep.filters.AuthWorkItemListEPR</filter-class>
   </filter>
 
 
@@ -143,6 +163,14 @@
   <filter-mapping>
     <filter-name>AuthServSubteam</filter-name>
     <url-pattern>/IndexServSubteam</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>AuthWorkItemListEPR</filter-name>
+    <url-pattern>/WorkItemListEPR</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>AuthWorkItemListEPR</filter-name>
+    <url-pattern>/GetEPR</url-pattern>
   </filter-mapping>
   
 </web-app>  
