--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,7 +33,19 @@
   </servlet>
   <servlet>
     <servlet-name>GetRR</servlet-name>
-    <servlet-class>sep.servlets.GetEPR</servlet-class>
+    <servlet-class>sep.servlets.GetRR</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>CreateFR</servlet-name>
+    <servlet-class>sep.servlets.CreateFR</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>WorkItemListFR</servlet-name>
+    <servlet-class>sep.servlets.WorkItemListFR</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GetFR</servlet-name>
+    <servlet-class>sep.servlets.GetFR</servlet-class>
   </servlet>
   
   <servlet-mapping>
@@ -92,7 +104,7 @@
     <servlet-name>GetEPR</servlet-name>
     <url-pattern>/GetEPR</url-pattern>
   </servlet-mapping>
-    <servlet-mapping>
+  <servlet-mapping>
     <servlet-name>CreateRR</servlet-name>
     <url-pattern>/CreateRR</url-pattern>
   </servlet-mapping>
@@ -103,6 +115,18 @@
   <servlet-mapping>
     <servlet-name>GetRR</servlet-name>
     <url-pattern>/GetRR</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>CreateFR</servlet-name>
+    <url-pattern>/CreateFR</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>WorkItemListFR</servlet-name>
+    <url-pattern>/WorkItemListFR</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GetFR</servlet-name>
+    <url-pattern>/GetFR</url-pattern>
   </servlet-mapping>
   
   
@@ -149,6 +173,10 @@
   <filter>
     <filter-name>AuthRR</filter-name>
     <filter-class>sep.filters.AuthRR</filter-class>
+  </filter>
+  <filter>
+    <filter-name>AuthFR</filter-name>
+    <filter-class>sep.filters.AuthFR</filter-class>
   </filter>
 
 
@@ -215,6 +243,18 @@
   <filter-mapping>
     <filter-name>AuthHR</filter-name>
     <url-pattern>/GetRR</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>AuthFR</filter-name>
+    <url-pattern>/CreateFR</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>AuthFM</filter-name>
+    <url-pattern>/WorkItemListFR</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+  <filter-name>AuthFM</filter-name>
+    <url-pattern>/GetFR</url-pattern>
   </filter-mapping>
   
 </web-app>  
